[tool.poetry]
name = "cipher_bo2297"
version = "0.1.0"
description = "MDS HW7 package of bo2297, it is a package for cipher function and some tests"
authors = ["Bengusu Ozcan"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
